fixed preamble, parsed json to import folder., cleaned orginal json, renamed orginal json, set up the password., investigated the data., defined nodes and relationship., created cypher and code ready to mount in to the database

--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ NEO4J_IMAGE_TAG=5.26.0
 
 # Credentials (change before first run)
 NEO4J_USER=neo4j
-NEO4J_PASSWORD=changeMe_Strong!
-NEO4J_AUTH=neo4j/changeMe_Strong!
+NEO4J_PASSWORD=waalaipassword
+NEO4J_AUTH=neo4j/waalaipassword
 
 # Host ports (avoid conflicts with other projects)
 NEO4J_HTTP_HOST_PORT=8474
