FWV- Removed Neo4j_user and neo4j_password ., and replaced with db user and db password to fix startup error., added health check in docker compose file.,Retained only ne4j auth., replaced the variables with direct port numbers.,Took database dump

--- a/.env
+++ b/.env
@@ -4,13 +4,13 @@
 NEO4J_IMAGE_TAG=5.26.0
 
 # Credentials (change before first run)
-NEO4J_USER=neo4j
-NEO4J_PASSWORD=waalaipassword
-NEO4J_AUTH=neo4j/waalaipassword
+#NEO4J_USER=neo4j
+#NEO4J_PASSWORD=waalaipassword
 
-# Host ports (avoid conflicts with other projects)
-NEO4J_HTTP_HOST_PORT=8474
-NEO4J_BOLT_HOST_PORT=8687
+DB_USER=neo4j
+DB_PASSWORD=waalaipassword
+
+NEO4J_AUTH=neo4j/waalaipassword
 
 # Memory (increase for heavy GDS work)
 NEO4J_HEAP_INITIAL=1G
@@ -18,4 +18,4 @@ NEO4J_HEAP_MAX=1G
 NEO4J_PAGECACHE=1G
 
 # Plugins: APOC + GDS now
-NEO4J_PLUGINS=["apoc","gds"]
+NEO4J_PLUGINS=["apoc","graph-data-science"]
