--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,14 @@ services:
     container_name: neo4j-dev-kg
     restart: unless-stopped
 
-    env_file:
-      - .env
-
     ports:
-      - "${NEO4J_HTTP_HOST_PORT:-8474}:7474"   # Browser (HTTP)
-      - "${NEO4J_BOLT_HOST_PORT:-8687}:7687"   # Bolt
+      - "8474:7474"   # Browser (HTTP)
+      - "8687:7687"   # Bolt
 
     environment:
       - NEO4J_AUTH=${NEO4J_AUTH}
-      - NEO4J_USER=${NEO4J_USER}
-      - NEO4J_PASSWORD=${NEO4J_PASSWORD}
+      #- NEO4J_USER=${NEO4J_USER}
+      #- NEO4J_PASSWORD=${NEO4J_PASSWORD}
 
       # Plugins: APOC + GDS
       - NEO4J_PLUGINS=${NEO4J_PLUGINS}
@@ -32,16 +29,14 @@ services:
       - NEO4J_server_memory_pagecache_size=${NEO4J_PAGECACHE:-1G}
 
     volumes:
-      neo4j_dev_kg_data:
-        name: neo4j_dev_kg_data
-      neo4j_dev_kg_plugins:
-        name: neo4j_dev_kg_plugins
+      - neo4j_dev_kg_data:/data
+      - neo4j_dev_kg_plugins:/plugins
       - ./import:/import
       - ./logs:/logs
       - ./backups:/backups
 
     healthcheck:
-      test: ["CMD-SHELL", "/var/lib/neo4j/bin/cypher-shell -a bolt://localhost:7687 -u ${NEO4J_USER} -p ${NEO4J_PASSWORD} 'RETURN 1' || exit 1"]
+      test: ["CMD-SHELL", "/var/lib/neo4j/bin/cypher-shell -a bolt://localhost:7687 -u ${DB_USER} -p ${DB_PASSWORD} 'RETURN 1' || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 10
